--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,6 @@ max_line_length = 120
 
 [{.babelrc,.eslintrc,.stylelintrc,jest.config,*.bowerrc,*.jsb3,*.jsb2}]
 # indent_size = 2
+
+[Makefile]
+indent_style = tab
