chore: Apply flake8 rules

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [metadate]
 license_file = LICENSE
 
-[pycodestyle]
-exclude = ./venv-py/
+[flake8]
+ignore = W605, F401, F403, F405
 max-line-length = 120
+inline-quotes = single
+statistics = True
+exclude = venv-py,build,dist,.git,__pycache__,lib
